lock icon spacing fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -221,12 +221,20 @@
         padding:0;
         line-height:1.4em;
     }
-    .journal-pills span{
+    .journal-pills > span{
         display:inline-block;
         padding:5px 15px;
         border-radius:16px;
         margin:5px;
         font-size:0.85em;
+        & > .spacefixer{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            span{
+                line-height: .85em;
+            }
+        }
     }
     
     .journal-pills span a{
@@ -496,8 +504,8 @@
         width:16px;
         height:16px;
         margin-right: 15px;
-        position: relative;
-        top:2px;
+        // position: relative;
+        // top:2px;
     }
     
     h3{
